--- a/ExtraLuminuxCoffee.css
+++ b/ExtraLuminuxCoffee.css
@@ -44,18 +44,24 @@
 	--color-light-dark: #BBBBBB;
 	--color-orange-transparent: #F58420dd;
 	--color-dark-transparent: #000c;
+	--color-purple: #6E0472;
+	--color-purple-transparent: #6E0472dd;
 
 	/*Medidas*/
 	--med-none: 0rem;
 	--med-mini: .3rem;
 	--med-one: 1rem;
+	--med-midi: .5rem;
 }
 
 /*GENERAL*/
 *{
 	font-family: var(--font-ubuntu);
-	background-color: var(--color-light);
+	
 	color: var(--color-dark);
+}
+body{
+	background-color: var(--color-light);
 }
 body, html, h1, h2, h3, h4, h5, h6, p, pre, hr{
 	margin: var(--med-none);
@@ -68,6 +74,7 @@ a{
 	transition-property: color;
 	transition-duration: 0.2s;
 	text-decoration: none;
+	color: var(--color-orange);
 }a:link{
 	color: var(--color-orange);
 }a:visited{
@@ -87,9 +94,10 @@ hr{
 }
 
 *::selection{
-	background-color: var(--color-orange-transparent);
-	color: var(--color-dark);
+	background-color: var(--color-purple-transparent);
+	color: var(--color-light);
 }
+
 /*Componentes*/
 *[class*="boton"]{
 	color: var(--color-dark)!important;
@@ -119,6 +127,38 @@ hr{
 	padding: calc(var(--med-one) + var(--med-mini)) calc(var(--med-one) - var(--med-mini)) calc(var(--med-one) - var(--med-mini)) calc(var(--med-one) + var(--med-mini));
 }
 
+.menu-cuadric-resize{
+	list-style: none;
+	padding: 0;
+	display: flex;
+	position: relative;
+	width: 100%;
+	/*background-color: red;*/
+	margin: 0;
+	flex-wrap: wrap;
+}.menu-cuadric-resize > li{
+	transition: all .3s ease;
+	background-color: var(--color-dark);
+	position: relative;
+	padding: 1rem;
+	flex-grow: 1;
+	min-width: 10rem;
+}.menu-cuadric-resize > li > a{
+	transition: all .3s ease;
+	position: relative;
+	display: block;
+	padding: 0;
+	background-color: var(--color-dark);
+	color: var(--color-light);
+	text-align: center;
+}.menu-cuadric-resize > li:hover > a{
+	padding: 1rem;
+	background-color: var(--color-light);
+	color: var(--color-dark);
+	font-size: 130%;
+}.menu-cuadric-resize > li:hover{
+	padding: 0rem;
+}
 /*Usabilidad*/
 .color-text-yellow{
 	color: var(--color-yellow)!important;
